# ritrova

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  REFACTORING_PLAN.md  pyproject.toml
adr/: 001-face-detection-model.md  002-clustering-algorithm.md  003-person-age-splitting.md  004-pet-detection-pipeline.md  005-video-face-extraction.md  006-database-design.md  007-auto-assign-workflow.md  008-scene-descriptions-vlm.md
docs/: adr-009-unified-analysis-pipeline.md  adr-010-analyse-performance-optimization.md  adr-011-retire-vlm-default.md  adr-012-architecture-refactor.md  auth-session-design-home-server.md  bugs.md  design-guide.md  features.md  subject-detail-redesign.md  ui-assessment.md  ux-audit-2026-04-10.md  web-app-feature-gap-2026-04-10.md
docs/superpowers/plans/: 2026-04-10-htmx-alpine-migration.md
scripts/: backfill_video_frames.py  benchmark_scan.sh  dedup_findings.py  migrate_embedding_dim.py  migrate_photo_model.py  migrate_subjects.py  rebuild_stranger_pets.py  rebuild_video_frame_paths.py  rescan_losers.py
scripts/investigations/: aquarium_face_loss.py
src/face_recog/: app.py  cli.py  cluster.py  db.py  detector.py  embeddings.py  pet_detector.py  scanner.py  services.py
src/face_recog/static/: app.js  style.css
src/face_recog/templates/: base.html  cluster_detail.html  clusters.html  compare.html  find_similar.html  index.html  merge_suggestions.html  person_detail.html  persons.html  photo.html  search.html  singletons.html
src/face_recog/templates/partials/: cluster_hint.html  lightbox.html  merge_row.html  person_face_grid.html  singleton_grid.html
src/ritrova/: analysis.py  analysis_steps.py  app.py  cli.py  cluster.py  db.py  describer.py  description_stages.py  detection.py  detector.py  hints.py  images.py  pet_detector.py  scan_pipeline.py  scanner.py  services.py  undo.py
src/ritrova/app/: __init__.py  deps.py  helpers.py
src/ritrova/app/routers/: __init__.py  browse.py  circles.py  clusters.py  findings.py  images.py  legacy_redirects.py  pages.py  print_selection.py  subjects.py  together.py  undo.py
src/ritrova/db/: __init__.py  _base.py  assignments.py  circles.py  clusters.py  connection.py  curation.py  descriptions.py  findings.py  maintenance.py  models.py  path_metadata.py  paths.py  print_selection.py  scans.py  source_search.py  sources.py  subjects.py  undo_support.py
src/ritrova/services_domain/: __init__.py  circles_service.py  cluster_service.py  curation_service.py  findings_service.py  receipts.py  subject_service.py
src/ritrova/static/: app.js  input.css  style.css
src/ritrova/static/js/: alpine-components.js  dialogs.js  fetch-wrapper.js  undo.js
src/ritrova/templates/: base.html  browse.html  circle_detail.html  circles.html  cluster_detail.html  clusters.html  compare.html  find_similar.html  index.html  merge_suggestions.html  person_detail.html  persons.html  photo.html  print_selection.html  search.html  singletons.html  subject_detail.html  subjects.html  together.html
src/ritrova/templates/partials/: browse_results.html  circle_picker.html  cluster_card.html  cluster_hint.html  dialog.html  entity_header.html  face_grid.html  inline_rename_title.html  lightbox.html  merge_page.html  merge_row.html  person_card.html  person_picker.html  popover_subject_picker.html  singleton_grid.html  source_grid.html  subject_card.html  subject_face_grid.html  subject_face_tile.html  subject_finding_grid.html  subject_picker.html  toast.html  together_results.html  video_player.html
tests/: _helpers.py  conftest.py  test_analysis.py  test_analysis_steps.py  test_app.py  test_cli.py  test_cluster.py  test_db.py  test_description_stages.py  test_descriptions.py  test_e2e.py  test_e2e_undo.py  test_embeddings.py  test_hints.py  test_prune.py  test_scan_pipeline.py  test_scanner.py  test_services.py  test_undo.py
tests/routers/: test_findings_manual.py  test_route_ordering.py  test_undo_router.py
tests/services_domain/: _fixtures.py  test_circles_service.py  test_cluster_service.py  test_curation_service.py  test_findings_service.py  test_subject_service.py  test_transaction_concurrency.py
